<resources>
    <string name="app_name">Lengua De Señas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general">Usos Cotidianos</string>
    <string name="verbo">Verbo,Pronombres Y ADVERBIOS</string>
    <string name="dactilologico">Dactilologico</string>
    <string name="practica">Practica</string>
    <string name="gramatica">Personas y Relaciones</string>
    <string name="mundo">Mundo</string>
    <string name="colo">Colores</string>
    <string name="color">(Mhhaunnaj Kbubb)</string>
    <string name="amarillo">Amarillo</string>
    <string name="amari">(Mhhaunnaj Kbubb)</string>
    <string name="anaranjado">Anaranjado</string>
    <string name="anaran">(Mhhaunnaj Kbubb)</string>
    <string name="celeste"> Celeste</string>
    <string name="cele">(Mhhaunnaj Kbubb)</string>
    <string name="marron">Marron</string>
    <string name="marr">(Mhhaunnaj Kbubb)</string>
    <string name="beige">Beige</string>
    <string name="beig">(Mhhaunnaj Kbubb)</string>
    <string name="rosa">Rosa</string>
    <string name="ros">(Mhhaunnaj Kbubb)</string>
    <string name="violeta">Violeta</string>
    <string name="viole">(Mhhaunnaj Kbubb)</string>
    <string name="gris">Gris</string>
    <string name="gri">(Mhhaunnaj Kbubb)</string>
    <string name="plateado">Plateado</string>
    <string name="platea">(Mhhaunnaj Kbubb)</string>
    <string name="dorado">Dorado</string>
    <string name="dorad">(Mhhaunnaj Kbubb)</string>
    <string name="clarin">Claro</string>
    <string name="clar">(Mhhaunnaj Kbubb)</string>
    <string name="oscuro">Oscuro</string>
    <string name="oscu">(Mhhaunnaj Kbubb)</string>
    <string name="opaco">Opaco</string>
    <string name="opa">(Mhhaunnaj Kbubb)</string>
    <string name="blanco">Blanco</string>
    <string name="blac">(Mhhaunnaj Kbubb)</string>
    <string name="negro">Negro</string>
    <string name="negr">(Mhhaunnaj Kbubb)</string>
    <string name="rojo">Rojo</string>
    <string name="roj">(Mhhaunnaj Kbubb)</string>
    <string name="azul">Azul</string>
    <string name="az">(Mhhaunnaj Kbubb)</string>
    <string name="verde">Verde</string>
    <string name="verd">(Mhhaunnaj Kbubb)</string>
    <string name="ropaa">Ropa</string>
    <string name="rop">(Mhhaunnaj Kbubb)</string>
    <string name="remera">Remera</string>
    <string name="reme">(Mhhaunnaj Kbubb)</string>
    <string name="vestido">Vestido</string>
    <string name="vestid">(Mhhaunnaj Kbubb)</string>
    <string name="blusa">Blusa</string>
    <string name="bls">(Mhhaunnaj Kbubb)</string>
    <string name="pijama">Pijama</string>
    <string name="pija">(Mhhaunnaj Kbubb)</string>
    <string name="camisa">Camisa</string>
    <string name="camis">(Mhhaunnaj Kbubb)</string>
    <string name="pantalon">Pantalon</string>
    <string name="pantal">(Mhhaunnaj Kbubb)</string>
    <string name="pollera">Pollera</string>
    <string name="polle">(Mhhaunnaj Kbubb)</string>
    <string name="jeans">Jeans</string>
    <string name="jens">(Mhhaunnaj Kbubb)</string>
    <string name="campera">Campera</string>
    <string name="campe">(Mhhaunnaj Kbubb)</string>
    <string name="saco">Saco</string>
    <string name="sac">(Mhhaunnaj Kbubb)</string>
    <string name="tapado">Tapado</string>
    <string name="tapa">(Mhhaunnaj Kbubb)</string>
    <string name="buzo">Buzo</string>
    <string name="buz">(Mhhaunnaj Kbubb)</string>
    <string name="guardapolvo">Guardapolvo</string>
    <string name="guardapol">(Mhhaunn-aj Kbubb)</string>
    <string name="ropaintmuj">Ropainteriordemujer</string>
    <string name="ropint">(Mhhaunnaj Kbubb)</string>
    <string name="zapatos">Zapatos</string>
    <string name="zapat">(Mhhaunnaj Kbubb)</string>
    <string name="zapatilla">Zapatillas</string>
    <string name="zapatill">(Mhhaunnaj Kbubb)</string>
    <string name="ojota">Ojotas</string>
    <string name="ojot">(Mhhaunnaj Kbubb)</string>
    <string name="pantunflas">Pantunflas</string>
    <string name="pantunf">(Mhhaunnaj Kbubb)</string>
    <string name="cinto">Cinto</string>
    <string name="cint">(Mhhaunnaj Kbubb)</string>
    <string name="pañuela">Pañuelo</string>
    <string name="pañ">(Mhhaunnaj Kbubb)</string>
    <string name="gorro">Gorro</string>
    <string name="gorr">(Mhhaunnaj Kbubb)</string>
    <string name="bufanda">Bufanda</string>
    <string name="bufan">(Mhhaunnaj Kbubb)</string>
    <string name="cartera">Cartera</string>
    <string name="carter">(Mhhaunnaj Kbubb)</string>
    <string name="relol">Reloj</string>
    <string name="relo">(Mhhaunnaj Kbubb)</string>
    <string name="pulsera">Pulsera</string>
    <string name="pulsr">(Mhhaunnaj Kbubb)</string>
    <string name="aros">Aros</string>
    <string name="aro">(Mhhaunnaj Kbubb)</string>
    <string name="anteojo">Anteojos</string>
    <string name="antio">(Mhhaunnaj Kbubb)</string>
    <string name="cadena">Cadena</string>
    <string name="cade">(Mhhaunnaj Kbubb)</string>
    <string name="anillo">Anillo</string>
    <string name="anill">(Mhhaunnaj Kbubb)</string>
    <string name="verbosedesplazamiento">Verbos De Desplazamiento</string>
    <string name="vdd">(Mover la mano)</string>
    <string name="pronombrespersonales">Pronombres Personales</string>
    <string name="ppe">(Mover la mano)</string>
    <string name="pronombresposesivos">Pronombres Posesivos</string>
    <string name="ppo">(Mover la mano)</string>
    <string name="interrogaciones">Interrogaciones</string>
    <string name="interr">(Mover la mano)</string>
    <string name="referenciastemporales">Referencias Temporales</string>
    <string name="rt">(Mover la mano)</string>
    <string name="adverbios">Adverbios</string>
    <string name="adv">(Mover la mano)</string>
    <string name="aqui">Aqui</string>
    <string name="aq">(Mover la mano)</string>
    <string name="ahi">Ahi</string>
    <string name="ah">(Mover la mano)</string>
    <string name="alli">Alli</string>
    <string name="all">(Mover la mano)</string>
    <string name="cerca">Cerca</string>
    <string name="cerc">(Mover la mano)</string>
    <string name="lejos">Lejos</string>
    <string name="lej">(Mover la mano)</string>
    <string name="mucho">Mucho</string>
    <string name="much">(Mover la mano)</string>
    <string name="poco">Poco</string>
    <string name="pco">(Mover la mano)</string>
    <string name="nada">Nada</string>
    <string name="na">(Mover la mano)</string>
    <string name="demasiado">Demasiado</string>
    <string name="dema">(Mover la mano)</string>
    <string name="bastante">Bastante</string>
    <string name="bastan">(Mover la mano)</string>
    <string name="pregunta">Pregunta</string>
    <string name="pregun">(Mover la mano)</string>
    <string name="que">Que</string>
    <string name="qu">(Mover la mano)</string>
    <string name="quien">Quien</string>
    <string name="qi">(Mover la mano)</string>
    <string name="donde">Donde</string>
    <string name="don">(Mover la mano)</string>
    <string name="cual">Cual</string>
    <string name="cua">(Mover la mano)</string>
    <string name="como">Como</string>
    <string name="commm">(Mover la mano)</string>
    <string name="cuando">Cuando</string>
    <string name="cuand">(Mover la mano)</string>
    <string name="cuantos">Cuantos</string>
    <string name="cto">(Mover la mano)</string>
    <string name="paraque">Paraque</string>
    <string name="pq">(Mover la mano)</string>
    <string name="porque">Paraque</string>
    <string name="poq">(Mover la mano)</string>
    <string name="yo">Yo</string>
    <string name="io">(Mover la mano)</string>
    <string name="tu">Tu</string>
    <string name="tuu">(Mover la mano)</string>
    <string name="elElla">ElElla</string>
    <string name="ee">(Mover la mano)</string>
    <string name="nosotros">Nosotros</string>
    <string name="noso">(Mover la mano)</string>
    <string name="ustedes">Ustedes</string>
    <string name="usted">(Mover la mano)</string>
    <string name="ellosEllas"> EllosEllas</string>
    <string name="ees">(Mover la mano)</string>
    <string name="mio">Mio</string>
    <string name="miio">(Mover la mano)</string>
    <string name="tuyo">Tuyo</string>
    <string name="tuy">(Mover la mano)</string>
    <string name="suyo">Suyo</string>
    <string name="suy">(Mover la mano)</string>
    <string name="nuestro">Nuestro</string>
    <string name="nues">(Mover la mano)</string>
    <string name="todos">Todos</string>
    <string name="todes">(Mover la mano)</string>
    <string name="ayer">Ayer</string>
    <string name="aye">(Mover la mano)</string>
    <string name="antesdeayer">Antes de ayer</string>
    <string name="aday">(Mover la mano)</string>
    <string name="hoy">Hoy</string>
    <string name="hoi">(Mover la mano)</string>
    <string name="mañana">Mañana</string>
    <string name="mañ">(Mover la mano)</string>
    <string name="pasadomañana">Pasdo mañana</string>
    <string name="pasadom">(Mover la mano)</string>
    <string name="antes">Antes</string>
    <string name="ant">(Mover la mano)</string>
    <string name="pasado">Pasado</string>
    <string name="pasad">(Mover la mano)</string>
    <string name="futuro">Futuro</string>
    <string name="futu">(Mover la mano)</string>
    <string name="alamañana">A la mañana</string>
    <string name="alamañ">(Mover la mano)</string>
    <string name="alatarde">A la tarde</string>
    <string name="alatar">(Mover la mano)</string>
    <string name="almediodia">Al mediodia</string>
    <string name="almediod">(Mover la mano)</string>
    <string name="alanoche">A la noche</string>
    <string name="alanoch">(Mover la mano)</string>
    <string name="alamadrugada">A la madrugada</string>
    <string name="alamadru">(Mover la mano)</string>
    <string name="todoslosdia">Todos los dias</string>
    <string name="todoslosd">(Mover la mano)</string>
    <string name="todoeldia">Todo el dia</string>
    <string name="todeel">(Mover la mano)</string>
    <string name="siempre">Siempre</string>
    <string name="siemp">(Mover la mano)</string>
    <string name="parasiempre">Para siempre</string>
    <string name="parasiem">(Mover la mano)</string>
    <string name="nunca">Nunca</string>
    <string name="nunc">(Mover la mano)</string>
    <string name="primeravez">Primera vez</string>
    <string name="pvz">(Mover la mano)</string>
    <string name="proximo">Proximo</string>
    <string name="proxi">(Mover la mano)</string>
    <string name="hasta">Hasta</string>
    <string name="hast">(Mover la mano)</string>
    <string name="temprano">Temprano</string>
    <string name="tempra">(Mover la mano)</string>
    <string name="tardar">Tardar</string>
    <string name="tarda">(Mover la mano)</string>
    <string name="tarde">Tarde</string>
    <string name="tard">(Mover la mano)</string>
    <string name="dia">Dia</string>
    <string name="di">(Mover la mano)</string>
    <string name="diafestivo">Dia Festivo</string>
    <string name="df">(Mover la mano)</string>
    <string name="hacerlatare">Hacer la tarea</string>
    <string name="ht">(Mover la mano)</string>
    <string name="ir">Ir/salir</string>
    <string name="irsali">(Mover la mano)</string>
    <string name="quedarse">Quedarse</string>
    <string name="queda">(Mover la mano)</string>
    <string name="venir">Venir</string>
    <string name="ven">(Mover la mano)</string>
    <string name="entrar">Entrar</string>
    <string name="entr">(Mover la mano)</string>
    <string name="subir">Subir</string>
    <string name="subi">(Mover la mano)</string>
    <string name="bajar">Bajar</string>
    <string name="baja">(Mover la mano)</string>
    <string name="caminar">Caminar</string>
    <string name="cam">(Mover la mano)</string>
    <string name="correr">Correr</string>
    <string name="corr">(Mover la mano)</string>
    <string name="llegar">Llegar</string>
    <string name="lleg">(Mover la mano)</string>
    <string name="esperar">Esperar</string>
</resources>